--- a/frontend_mentor/faq-accordion-main/style.css
+++ b/frontend_mentor/faq-accordion-main/style.css
@@ -1,26 +1,55 @@
+:root {
+    --background-main: hsl(0, 0%, 100%);
+    --background-color: #f9f0ff;
+    --answer-color: hsl(292, 16%, 49%);
+    --text-color: hsl(292, 42%, 14%);
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    color: aqua;
+    color: var(--text-color)
 }
+
 body, html {
     width: 100%;
-    /* background-image: url("./assets/images/background-pattern-mobile.svg"); */
+    height: 100%;
+    background-color: var(--background-color);
+    font-size: 16px;
 }
 
-
 .background {
-    position: absolute ;
+    position: absolute;
     width: 100%;
-    height: 33vh;
     top: 0;
-    z-index: 99;
+    left: 0;
+    /* right: 0; */
+    z-index: 9;
+}
+
+.desktop {
+    display: none;
+}
+
+.main-wrapper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'work sans';
+    z-index: 999;
 }
 
 main {
-    z-index: 999;
-    background-color: cyan;
+    max-width: 500px;
+    background-color: var(--background-main);
+    margin-inline: 2rem;
+    border-radius: 7px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 1rem;
 }
 
 header {
@@ -28,7 +57,7 @@ header {
 }
 
 .faqs {
-
+    font-weight: 700;
 }
 
 .main-container {
@@ -38,6 +67,7 @@ header {
 .question-wrapper {
     display: flex;
     justify-content: space-between;
+    margin-block: 1rem;
 }
 
 .question-wrapper:hover {
@@ -45,7 +75,7 @@ header {
 }
 
 .question {
-
+    font-weight: 600;
 }
 
 .plus {
@@ -57,10 +87,22 @@ header {
 }
 
 .answer {
-
+    color: var(--answer-color);
+    font-weight: 400;
+    margin-block: 1rem;
 }
 
 /* last one */
 .hidden {
     display: none;
+}
+
+@media (min-width: 1024px) {
+    .mobile {
+        display: none;
+    }
+
+    .desktop {
+        display: inline;
+    }
 }
